building out get endpoints
